fix(agent-config): address review comments
- Use StringUtils.isBlank + explicit BLUEPRINT type check
- Rename isNumeric to isPrimitive for accuracy
- Use StringBuilder in generateUpdateDescription

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>